Add Afta Sans font and resolve animation issues

--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -27,7 +27,7 @@
 		<section id="bio">
 			<p>Hello there traveler, why don't you sit a while a listen?</p>
 			<p>As you might've guessed my name is Carl Bergenhem and I am a Boston-based web developer, technical speaker, and gaming aficionado.</p>
-			<p>So, what do I do? Well, I currently work as an Enterprise Solutions Consultant at Telerik, a pretty awesome company that specializes in providing tools for the entire end-to-end developerment cycle. I'm lucky enough to be able to focus on web-related technologies, especially the HTML/CSS/JavaScript, ASP.NET MVC, and ASP.NET AJAX platforms.</p>
+			<p>So, what do I do? Well, I currently work as an Enterprise Solutions Consultant at Telerik, a pretty awesome company that specializes in providing tools for the entire end-to-end development application life cycle. I'm lucky enough to be able to focus on web-related technologies, especially the HTML/CSS/JavaScript, ASP.NET MVC, and ASP.NET AJAX platforms.</p>
 			<p>This might be obvious, but I love the web. You can often find me going on-and-on about how the web is the platform to use, and I try to share my affection to this lovely collection of technologies by speaking at various conferences.</p>
 			<p></p>
 		</section>
