Move init function to bottom of HTML page

--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -37,5 +37,10 @@
 	<section id="contact"></section>
 	<footer>
 	</footer>
+	<script type="text/javascript">
+		(function() {
+			SiteApp.init();
+		})();
+	</script>
 </body>
 </html>
