--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -36,38 +36,38 @@
 		<div class="tileView">
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 1 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 2 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 3 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 4 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 5 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 			<div class="tileContainer">
 				<div id="tile">
-					<div class="front"></div>
-					<div class="back"></div>
+					<div class="front">Project 6 Name</div>
+					<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
 				</div>
 			</div>
 		</div>
