Add contact session
Including text and icons

--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -4,6 +4,7 @@
 	<title>Carl Bergenhem</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles/styles.css" />
+	<link rel="stylesheet" href="styles/font-awesome.min.css" />
 	<script src="scripts/jquery-1.8.3.min.js"></script>
 	<script src="scripts/site.js"></script>
 </head>
@@ -72,8 +73,21 @@
 			</div>
 		</div>
 	</section>
-	<section id="contact"></section>
+	<section id="contact">
+		<h1>Contact Me</h1>
+		<section id="contactText">
+			<p>Want to get a hold of me?</p>
+			<p>You can easily do it by clicking any of the buttons below:</p>
+		</section>
+		<section id="contactButtons">
+			<button class="contactIcon"><i class="icon-twitter"></i></button>
+			<button class="contactIcon"><i class="icon-github"></i></button>
+			<button class="contactIcon"><i class="icon-google-plus"></i></button>
+			<button class="contactIcon"><i class="icon-envelope"></i></button>
+		</section>
+	</section>
 	<footer>
+		<p>&#169; Carl Bergenhem</p>
 	</footer>
 	<script type="text/javascript">
 		(function() {
