Change social buttons to a elements

--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -77,13 +77,13 @@
 		<h1>Contact Me</h1>
 		<section id="contactText">
 			<p>Want to get a hold of me?</p>
-			<p>You can easily do it by clicking any of the buttons below:</p>
+			<p>You can easily reach me at any one of these places</p>
 		</section>
 		<section id="contactButtons">
-			<button class="contactIcon"><i class="icon-twitter"></i></button>
-			<button class="contactIcon"><i class="icon-github"></i></button>
-			<button class="contactIcon"><i class="icon-google-plus"></i></button>
-			<button class="contactIcon"><i class="icon-envelope"></i></button>
+			<a href="http://www.twitter.com/carlbergenhem" target="_blank" class="contactIcon"><i class="icon-twitter"></i></a>
+			<a href="http://www.github.com/bergenhem" target="_blank" class="contactIcon"><i class="icon-github"></i></a>
+			<a href="https://plus.google.com/104327036926106432192/posts" target="_blank" class="contactIcon"><i class="icon-google-plus"></i></a>
+			<a href="#" target="_blank" class="contactIcon"><i class="icon-envelope"></i></a>
 		</section>
 	</section>
 	<footer>
