--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -80,10 +80,10 @@
 			<p>You can easily reach me at any one of these places</p>
 		</section>
 		<section id="contactButtons">
-			<a href="http://www.twitter.com/carlbergenhem" target="_blank" class="contactIcon"><i class="icon-twitter"></i></a>
-			<a href="http://www.github.com/bergenhem" target="_blank" class="contactIcon"><i class="icon-github"></i></a>
-			<a href="https://plus.google.com/104327036926106432192/posts" target="_blank" class="contactIcon"><i class="icon-google-plus"></i></a>
-			<a href="#" target="_blank" class="contactIcon"><i class="icon-envelope"></i></a>
+			<a href="http://www.twitter.com/carlbergenhem" target="_blank" class="contactIcon twitter"><i class="icon-twitter"></i></a>
+			<a href="http://www.github.com/bergenhem" target="_blank" class="contactIcon github"><i class="icon-github"></i></a>
+			<a href="https://plus.google.com/104327036926106432192/posts" target="_blank" class="contactIcon gplus"><i class="icon-google-plus"></i></a>
+			<a href="#" target="_blank" class="contactIcon email"><i class="icon-envelope"></i></a>
 		</section>
 	</section>
 	<footer>
