Add image and css to contact area

--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -80,6 +80,7 @@
 		<h1>Contact Me</h1>
 		<section id="contactText">
 			<p>Want to get a hold of me?</p>
+			<p><img src="images/carl_bergenhem_bio_pic.jpg" /></p>
 			<p>You can easily reach me at any one of these places</p>
 		</section>
 		<section id="contactButtons">
