--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -40,8 +40,8 @@
 			<div class="tileView">
 				<div class="tileContainer">
 					<div id="tile">
-						<div class="front">Project 1 Name</div>
-						<div class="back"><a href="#portfolio"><img src="http://placekitten.com/250/250" /></a></div>
+						<div class="front">Personal Website</div>
+						<div class="back"><a href="#portfolio"><img src="images/portfolio/personal_website.png" /></a></div>
 					</div>
 				</div>
 				<div class="tileContainer">
