--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="styles/font-awesome.min.css" />
 	<script src="scripts/jquery-1.8.3.min.js"></script>
 	<script src="scripts/site.js"></script>
+	<script src="scripts/modernizr.js"></script>
 </head>
 <body>
 	<header>
