Add blog post list rough layout CSS

--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -10,7 +10,12 @@
 	<header>
 		<p>Carl Bergenhem</p>
 	</header>
-	<section id="content"></section>
+	<section id="content">
+		<ul>
+			<li><a class="blogLink" href="#">Sample Blog Post</a><span class="postDate">2013-06-06</span></li>
+			<li><a class="blogLink" href="#">Sample Blog Post Again</a><span class="postDate">2013-06-05</span></li>
+		</ul>
+	</section>
 	<footer></footer>
 </body>
 </html>
