--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -14,6 +14,7 @@
 		<ul>
 			<li><a class="blogLink" href="#">Sample Blog Post</a><span class="postDate">2013-06-06</span></li>
 			<li><a class="blogLink" href="#">Sample Blog Post Again</a><span class="postDate">2013-06-05</span></li>
+			<li><a class="blogLink" href="#">I Made This!</a><span class="postDate">2013-06-04</span></li>
 		</ul>
 	</section>
 	<footer></footer>
