Update CSS for readability

--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -12,9 +12,9 @@
 	</header>
 	<section id="content">
 		<ul>
-			<li><a class="blogLink" href="#">Sample Blog Post</a><span class="postDate">2013-06-06</span></li>
-			<li><a class="blogLink" href="#">Sample Blog Post Again</a><span class="postDate">2013-06-05</span></li>
-			<li><a class="blogLink" href="#">I Made This!</a><span class="postDate">2013-06-04</span></li>
+			<li><a href="#">Sample Blog Post</a><div class="postDate">JUNE 6TH 2013</div></li>
+			<li><a href="#">Sample Blog Post Again</a><div class="postDate">JUNE 5TH 2013</div></li>
+			<li><a href="#">I Made This!</a><div class="postDate">JUNE 4TH 2013</div></li>
 		</ul>
 	</section>
 	<footer></footer>
