Add navigation and make theme darker

--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -10,6 +10,13 @@
 	<header>
 		<p>Carl Bergenhem</p>
 	</header>
+	<nav>
+		<ul>
+			<li>Blog</li>
+			<li>About</li>
+			<li>Talks</li>
+		</ul>
+	</nav>
 	<section id="content">
 		<ul>
 			<li><a href="#">Sample Blog Post</a><div class="postDate">JUNE 6TH 2013</div></li>
