Add navigation and nav CSS

--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -9,14 +9,14 @@
 <body>
 	<header>
 		<p>Carl Bergenhem</p>
-	</header>
-	<nav>
+		<nav>
 		<ul>
-			<li>Blog</li>
-			<li>About</li>
-			<li>Talks</li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Talks</a></li>
 		</ul>
 	</nav>
+	</header>
 	<section id="content">
 		<ul>
 			<li><a href="#">Sample Blog Post</a><div class="postDate">JUNE 6TH 2013</div></li>
