--- a/blog-site/index.html
+++ b/blog-site/index.html
@@ -19,9 +19,9 @@
 	</header>
 	<section id="content">
 		<ul>
-			<li><a href="#">Sample Blog Post</a><div class="postDate">JUNE 6TH 2013</div></li>
-			<li><a href="#">Sample Blog Post Again</a><div class="postDate">JUNE 5TH 2013</div></li>
-			<li><a href="#">I Made This!</a><div class="postDate">JUNE 4TH 2013</div></li>
+			<li><div class="postDate">JUNE 6TH 2013</div><a href="#">Sample Blog Post</a></li>
+			<li><div class="postDate">JUNE 5TH 2013</div><a href="#">Sample Blog Post Again</a></li>
+			<li><div class="postDate">JUNE 4TH 2013</div><a href="#">I Made This!</a></li>
 		</ul>
 	</section>
 	<footer></footer>
